--- a/设计文档/建筑/0.html
+++ b/设计文档/建筑/0.html
@@ -285,7 +285,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/notosanssc/v20/k3kIo84MPvpLmixcA63oeALZhaCt9w.otf) format('opentype');
+  src: url(https://fonts.gstatic.com/s/notosanssc/v24/k3kIo84MPvpLmixcA63oeALZhaCt9w.otf) format('opentype');
 }
 #construct code {
   color: #f1ffcc;
@@ -1014,8 +1014,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <li>&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9632;&#x5FA1;&#x529B;+20%</strong>&#x3002;</li>
 <li>&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9884;&#x5907;&#x5F79;&#x89C4;&#x6A21;+20%</strong>&#x3002;</li>
 <li>&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9020;&#x4EF7;-10%</strong>&#x3002;</li>
-<li>&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x8865;&#x7ED9;&#x8981;&#x6C42;-10%</strong>&#x3002;</li>
-<li>&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x63D0;&#x4F9B;&#x7684;&#x751F;&#x4EA7;&#x529B;+10%</strong>&#x3002;</li>
+<li>&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x751F;&#x4EA7;&#x65F6;&#x95F4;-10%</strong>&#x3002;</li>
 </ol>
 <div class="admonition warning">
 <p class="admonition-title">&#x6CE8;&#x610F;</p>
@@ -1143,11 +1142,11 @@ classDef target fill:#fad866, stroke:#c16b1f;
 &#x5EFA;&#x6210;&#x540E;&#x7684;&#x57FA;&#x7840;&#x589E;&#x76CA;&#x5305;&#x62EC;&#xFF1A;</p>
 <ol>
 <li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x653B;&#x51FB;&#x529B;+10%</strong>&#x3002;</li>
-<li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x79FB;&#x52A8;&#x901F;&#x5EA6;+20%</strong>&#x3002;</li>
+<li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x79FB;&#x52A8;&#x901F;&#x5EA6;+10%</strong>&#x3002;</li>
 <li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x7CBE;&#x51C6;&#x5EA6;+20%</strong>&#x3002;</li>
 <li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9632;&#x5FA1;&#x529B;+5%</strong>&#x3002;</li>
 <li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9020;&#x4EF7;-10%</strong>&#x3002;</li>
-<li>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;&#x547D;&#x4E2D;&#x76EE;&#x6807;&#x65F6;&#xFF0C;&#x5C06;&#x5BF9;&#x76EE;&#x6807;&#x9020;&#x6210;&#x6301;&#x7EED;<strong>20%&#x653B;&#x51FB;&#x95F4;&#x9694;&#x65F6;&#x95F4;&#x7684;-20%&#x79FB;&#x52A8;&#x901F;&#x5EA6;</strong>&#x6548;&#x679C;&#x3002;</li>
+<li><s>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;&#x547D;&#x4E2D;&#x76EE;&#x6807;&#x65F6;&#xFF0C;&#x5C06;&#x5BF9;&#x76EE;&#x6807;&#x9020;&#x6210;&#x6301;&#x7EED;<strong>20%&#x653B;&#x51FB;&#x95F4;&#x9694;&#x65F6;&#x95F4;&#x7684;-20%&#x79FB;&#x52A8;&#x901F;&#x5EA6;</strong>&#x6548;&#x679C;&#x3002;</s></li>
 </ol>
 <div class="admonition warning">
 <p class="admonition-title">&#x6CE8;&#x610F;</p>
@@ -1168,9 +1167,9 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <tbody>
 <tr>
 <td><strong>&#x79FB;&#x52A8;&#x901F;&#x5EA6;</strong></td>
-<td style="text-align:center">+20%</td>
 <td style="text-align:center">+10%</td>
-<td style="text-align:center">+10%</td>
+<td style="text-align:center">+5%</td>
+<td style="text-align:center">+5%</td>
 </tr>
 <tr>
 <td><strong>&#x7CBE;&#x51C6;&#x5EA6;</strong></td>
@@ -1277,9 +1276,9 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <li>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x653B;&#x51FB;&#x529B;+10%</strong>&#x3002;</li>
 <li>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x79FB;&#x52A8;&#x901F;&#x5EA6;+20%</strong>&#x3002;</li>
 <li>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9020;&#x4EF7;-10%</strong>&#x3002;</li>
-<li>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9884;&#x5907;&#x5F79;&#x89C4;&#x6A21;+10%</strong>&#x3002;</li>
-<li>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x5BF9;&#x5F13;&#x7BAD;&#x624B;&#x4F24;&#x5BB3;+20%</strong>&#x3002;</li>
-<li>&#x82E5;&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;&#x63A5;&#x89E6;&#x654C;&#x4EBA;&#x65F6;&#x901F;&#x5EA6;&#x4E0D;&#x4F4E;&#x4E8E;&#x5176;&#x6700;&#x5927;&#x901F;&#x5EA6;&#x7684;75%&#xFF0C;&#x5C06;&#x7ACB;&#x5373;&#x5BF9;&#x654C;&#x4EBA;&#x9020;&#x6210;<strong>110%&#x7684;&#x653B;&#x51FB;&#x4F24;&#x5BB3;</strong>&#x3002;</li>
+<li>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9884;&#x5907;&#x5F79;&#x89C4;&#x6A21;+20%</strong>&#x3002;</li>
+<li><s>&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x5BF9;&#x5F13;&#x7BAD;&#x624B;&#x4F24;&#x5BB3;+20%</strong>&#x3002;</s></li>
+<li><s>&#x82E5;&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;&#x63A5;&#x89E6;&#x654C;&#x4EBA;&#x65F6;&#x901F;&#x5EA6;&#x4E0D;&#x4F4E;&#x4E8E;&#x5176;&#x6700;&#x5927;&#x901F;&#x5EA6;&#x7684;75%&#xFF0C;&#x5C06;&#x7ACB;&#x5373;&#x5BF9;&#x654C;&#x4EBA;&#x9020;&#x6210;<strong>110%&#x7684;&#x653B;&#x51FB;&#x4F24;&#x5BB3;</strong>&#x3002;</s></li>
 </ol>
 <div class="admonition warning">
 <p class="admonition-title">&#x6CE8;&#x610F;</p>
@@ -1305,7 +1304,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <td style="text-align:center">+10%</td>
 </tr>
 <tr>
-<td><strong>&#x653B;&#x51FB;&#x95F4;&#x9694;</strong></td>
+<td><strong>&#x751F;&#x4EA7;&#x65F6;&#x95F4;</strong></td>
 <td style="text-align:center">-20%</td>
 <td style="text-align:center">-10%</td>
 <td style="text-align:center">-10%</td>
@@ -1336,7 +1335,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <td style="text-align:center">(10&#x91D1; + 10s)</td>
 </tr>
 <tr>
-<td><strong>&#x653B;&#x51FB;&#x95F4;&#x9694;</strong></td>
+<td><strong>&#x751F;&#x4EA7;&#x65F6;&#x95F4;</strong></td>
 
 <td style="text-align:center">(10&#x91D1; + 7.5s)</td>
 <td style="text-align:center">(10&#x91D1; + 10s)</td>
@@ -1367,7 +1366,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <td style="text-align:center">+15%HP</td>
 </tr>
 <tr>
-<td><strong>&#x653B;&#x51FB;&#x95F4;&#x9694;</strong></td>
+<td><strong>&#x751F;&#x4EA7;&#x65F6;&#x95F4;</strong></td>
 
 <td style="text-align:center">+20%HP</td>
 <td style="text-align:center">+15%HP</td>
@@ -1410,8 +1409,8 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <li>&#x653B;&#x57CE;&#x6B66;&#x5668;&#x7CFB;&#x4E0E;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x7CBE;&#x51C6;&#x5EA6;+10%</strong>&#x3002;</li>
 <li>&#x653B;&#x57CE;&#x6B66;&#x5668;&#x7CFB;&#x4E0E;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x9020;&#x4EF7;-10%</strong>&#x3002;</li>
 <li>&#x653B;&#x57CE;&#x6B66;&#x5668;&#x7CFB;&#x4E0E;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x751F;&#x4EA7;&#x65F6;&#x95F4;-15%</strong>&#x3002;</li>
-<li>&#x5F53;&#x6709;&#x4E0D;&#x5C11;&#x4E8E;&#x4E09;&#x540D;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;&#x96C6;&#x7FA4;&#x6218;&#x6597;&#x65F6;&#xFF0C;&#x4ED6;&#x4EEC;&#x7684;<strong>&#x7CBE;&#x51C6;&#x5EA6;+50%</strong>&#x3002;</li>
-<li>&#x5728;&#x653B;&#x57CE;&#x6B66;&#x5668;&#x7CFB;&#x5355;&#x4F4D;&#x9644;&#x8FD1;&#x7684;&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x653B;&#x51FB;&#x529B;+30%</strong>&#x3002;</li>
+<li><s>&#x5F53;&#x6709;&#x4E0D;&#x5C11;&#x4E8E;&#x4E09;&#x540D;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;&#x96C6;&#x7FA4;&#x6218;&#x6597;&#x65F6;&#xFF0C;&#x4ED6;&#x4EEC;&#x7684;**&#x7CBE;&#x51C6;&#x5EA6;</s>+50%**&#x3002;</li>
+<li><s>&#x5728;&#x653B;&#x57CE;&#x6B66;&#x5668;&#x7CFB;&#x5355;&#x4F4D;&#x9644;&#x8FD1;&#x7684;&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;<strong>&#x653B;&#x51FB;&#x529B;+30%</strong>&#x3002;</s></li>
 </ol>
 <div class="admonition warning">
 <p class="admonition-title">&#x6CE8;&#x610F;</p>
@@ -1538,8 +1537,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <p>&#x5B66;&#x9662;&#x5EFA;&#x6210;&#x540E;&#xFF0C;&#x53EF;&#x4EE5;&#x4E3A;&#x79D1;&#x6280;&#x7814;&#x53D1;&#x63D0;&#x4F9B;&#x589E;&#x76CA;&#x6548;&#x679C;&#xFF0C;&#x5305;&#x62EC;&#xFF1A;</p>
 <ol>
 <li>&#x751F;&#x4EA7;&#x529B;&#x80FD;&#x591F;&#x63D0;&#x4F9B;&#x66F4;&#x5927;&#x7684;&#x79D1;&#x6280;&#x7814;&#x7A76;&#x901F;&#x7387;&#x3002;</li>
-<li>&#x5F53;&#x73A9;&#x5BB6;&#x6709;&#x5904;&#x4E8E;&#x7814;&#x53D1;&#x72B6;&#x6001;&#x7684;&#x79D1;&#x6280;&#x65F6;&#xFF0C;&#x73A9;&#x5BB6;&#x7684;&#x751F;&#x4EA7;&#x529B;+20%&#x3002;</li>
-<li>&#x5F53;&#x73A9;&#x5BB6;&#x5C06;&#x79D1;&#x6280;&#x6811;&#x4E0A;&#x6240;&#x6709;&#x79D1;&#x6280;&#x7814;&#x53D1;&#x5B8C;&#x6BD5;&#x65F6;&#xFF0C;&#x73A9;&#x5BB6;&#x7684;&#x751F;&#x4EA7;&#x529B;+30%&#x3002;</li>
+<li>&#x6BCF;&#x4E2A;&#x7814;&#x53D1;&#x5B8C;&#x6210;&#x7684;&#x79D1;&#x6280;&#x53EF;&#x4EE5;&#x4E3A;&#x73A9;&#x5BB6;+1&#x751F;&#x4EA7;&#x529B;&#x3002;</li>
 </ol>
 <div class="admonition tip">
 <p class="admonition-title">&#x63D0;&#x793A;</p>
@@ -1648,7 +1646,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <p>&#x5E02;&#x573A;&#x5EFA;&#x6210;&#x540E;&#xFF0C;&#x53EF;&#x4EE5;&#x4E3A;&#x8D44;&#x6E90;&#x4E92;&#x6362;&#x589E;&#x76CA;&#x6548;&#x679C;&#xFF0C;&#x5305;&#x62EC;&#xFF1A;</p>
 <ol>
 <li>&#x98DF;&#x7269;&#x3001;&#x9EC4;&#x91D1;&#x4E24;&#x79CD;&#x8D44;&#x6E90;&#x4E92;&#x6362;&#x7684;<strong>&#x7A0E;&#x7387;&#x66F4;&#x4F4E;</strong>&#x3002;</li>
-<li>&#x9EC4;&#x91D1;&#x80FD;&#x4EA7;&#x751F;&#x5176;&#x6570;&#x91CF;<strong>10%&#x7684;&#x751F;&#x4EA7;&#x529B;</strong>&#x3002;</li>
+<li><s>&#x8D44;&#x6E90;&#x80FD;&#x4EA7;&#x751F;&#x5176;&#x6570;&#x91CF;<strong>10%&#x7684;&#x751F;&#x4EA7;&#x529B;</strong>&#x3002;</s></li>
 </ol>
 <h4 class="mume-header undefined" id="%E5%8D%87%E7%BA%A7-10">&#x5347;&#x7EA7;</h4>
 
@@ -1665,8 +1663,8 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <tbody>
 <tr>
 <td><strong>&#x7A0E;&#x7387;</strong></td>
-<td style="text-align:center">-50%</td>
-<td style="text-align:center">-50%</td>
+<td style="text-align:center">-0.1</td>
+<td style="text-align:center">-0.1</td>
 <td style="text-align:center">&#x65E0;&#x4E92;&#x6362;&#x7A0E;</td>
 </tr>
 </tbody>
