--- a/设计文档/政策/0.html
+++ b/设计文档/政策/0.html
@@ -285,7 +285,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/notosanssc/v20/k3kIo84MPvpLmixcA63oeALZhaCt9w.otf) format('opentype');
+  src: url(https://fonts.gstatic.com/s/notosanssc/v24/k3kIo84MPvpLmixcA63oeALZhaCt9w.otf) format('opentype');
 }
 #construct code {
   color: #f1ffcc;
@@ -429,7 +429,7 @@
 <table>
 <thead>
 <tr>
-<th>&#x7B49;&#x7EA7;</th>
+<th style="text-align:center">&#x7B49;&#x7EA7;</th>
 <th>&#x653F;&#x7B56;&#x540D;</th>
 <th>&#x653F;&#x7B56;&#x6548;&#x679C;</th>
 <th>&#x5360;&#x7528;&#x69FD;&#x4F4D;</th>
@@ -437,9 +437,9 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="6"><strong>T0</strong></td>
+<td style="text-align:center" rowspan="6"><strong>T0</strong></td>
 <td>&#x519B;&#x56E2;&#x6218;&#x672F;</td>
-<td>&#x8D85;&#x8FC7;&#x4E09;&#x540D;&#x58EB;&#x5175;&#x805A;&#x96C6;&#x65F6;&#xFF0C;&#x6BCF;&#x4F4D;&#x805A;&#x96C6;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
+<td>&#x8D85;&#x8FC7;&#x4E09;&#x540D;&#x58EB;&#x5175;&#x805A;&#x96C6;&#x65F6;&#xFF0C;&#x6BCF;&#x4F4D;&#x805A;&#x96C6;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+25%&#x3002;</td>
 <td>4</td>
 </tr>
 <tr>
@@ -451,7 +451,7 @@
 <tr>
 
 <td>&#x7406;&#x6027;&#x4E3B;&#x4E49;</td>
-<td>&#x8D2D;&#x4E70;&#x79D1;&#x6280;&#x514D;&#x8D39;&#xFF0C;&#x4F46;&#x79D1;&#x6280;&#x7814;&#x53D1;&#x901F;&#x5EA6;-50%&#x3002;</td>
+<td>&#x79D1;&#x6280;&#x7814;&#x53D1;&#x901F;&#x5EA6;+50%&#xFF0C;&#x79D1;&#x6280;&#x8D2D;&#x4E70;&#x4EF7;&#x683C;+50%&#x3002;</td>
 <td>4</td>
 </tr>
 <tr>
@@ -473,7 +473,7 @@
 <td>3</td>
 </tr>
 <tr>
-<td rowspan="8"><strong>T1</strong></td>
+<td style="text-align:center" rowspan="8"><strong>T1</strong></td>
 <td>&#x5C01;&#x5EFA;&#x5236;&#x5EA6;</td>
 <td>&#x519C;&#x573A;&#x5728;&#x6BCF;&#x6B21;&#x91C7;&#x96C6;&#x4E2D;&#x989D;&#x5916;&#x751F;&#x4EA7;2&#x98DF;&#x7269;&#xFF0C;&#x4F46;&#x58EB;&#x5175;&#x7684;&#x751F;&#x4EA7;&#x901F;&#x5EA6;-20%&#x3002;</td>
 <td>3</td>
@@ -521,7 +521,7 @@
 <td>3</td>
 </tr>
 <tr>
-<td rowspan="7"><strong>T2</strong></td>
+<td style="text-align:center" rowspan="7"><strong>T2</strong></td>
 <td>&#x5BF9;&#x5916;&#x8D38;&#x6613;</td>
 <td>&#x8D44;&#x6E90;&#x5151;&#x6362;&#x635F;&#x8017;-10%&#x3002;</td>
 <td>2</td>
@@ -563,7 +563,7 @@
 <td>1</td>
 </tr>
 <tr>
-<td rowspan="6"><strong>T3</strong></td>
+<td style="text-align:center" rowspan="6"><strong>T3</strong></td>
 <td>&#x6C11;&#x5175;&#x7EC4;&#x7EC7;</td>
 <td>&#x6B65;&#x5175;&#x7C7B;&#x5355;&#x4F4D;&#x7684;&#x9884;&#x5907;&#x5F79;&#x4E0A;&#x9650;+2&#x3002;</td>
 <td>1</td>
