--- a/index.html
+++ b/index.html
@@ -264,9 +264,12 @@ bottom: .4em;
   <h1 class="mume-header" id="toyempiresdocuments">ToyEmpiresDocuments</h1>
 
 <ul>
+<li><a href="https://hkingauditore.github.io/ToyEmpiresDocuments/%E6%95%99%E7%A8%8B/Tutorial.html">&#x7B80;&#x6613;&#x6559;&#x7A0B;</a></li>
 <li><a href="https://hkingauditore.github.io/ToyEmpiresDocuments/%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3/Base.html">&#x57FA;&#x7840;&#x6587;&#x6863;</a></li>
 <li><a href="https://hkingauditore.github.io/ToyEmpiresDocuments/%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3/%E5%BB%BA%E7%AD%91/0.html">&#x5EFA;&#x7B51;&#x6587;&#x6863;</a></li>
 <li><a href="https://hkingauditore.github.io/ToyEmpiresDocuments/%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3/%E6%94%BF%E7%AD%96/0.html">&#x653F;&#x7B56;&#x6587;&#x6863;</a></li>
+<li><a href="https://hkingauditore.github.io/ToyEmpiresDocuments/%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3/%E5%A3%AB%E5%85%B5/0.html">&#x58EB;&#x5175;&#x6587;&#x6863;</a></li>
+<li><a href="https://hkingauditore.github.io/ToyEmpiresDocuments/%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3/%E6%96%87%E6%98%8E/0.html">&#x6587;&#x660E;&#x6587;&#x6863;</a></li>
 </ul>
 
   </div>
